--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -23,3 +23,23 @@ jobs:
 
       - name: Remove Mongo DB collections for pr ${{ github.event.number }}
         run: PR=${{ github.event.number }} node --env-file server/.coverage.env server/clean-up-mongo-db-for-pr.js
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Remove Playwright HTML report from Azure
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az storage blob delete-batch --account-name tsetlui -s ts-etl-ui --pattern playwright-${{github.event.pull_request.number}}/* 
+
+      - name: Remove coverage report from Azure
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az storage blob delete-batch --account-name tsetlui -s ts-etl-ui --pattern coverage-${{github.event.pull_request.number}}/* 
+
