--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -46,9 +46,9 @@ jobs:
 
   publish-report:
     needs: [ e2e-test ]
+    if: always()
     name: publish-report
     runs-on: ubuntu-latest
-
     steps:
       - name: Download all report from Previous job
         uses: actions/download-artifact@v4
