--- a/.nycrc.json
+++ b/.nycrc.json
@@ -2,7 +2,7 @@
   "all": true,
   "check-coverage": true,
   "reportDir": "coverage-e2e",
-  "temp-dir": ".nyc_output",
+  "temp-dir": "e2e_nyc_output",
   "reporter": [
     "lcov",
     "json",
