--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,7 @@ Thumbs.db
 /allure-results
 
 # coverage file
-e2e_nyc_output/
-.nyc_output
+e2e_nyc_output
 coverage-e2e
 all-report/coverage-e2e
 all-report/playwright-report
