--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Reset MongoDB
         run: PR=${{ github.event.number }} npm run reset-db
 
-      - run: echo "run_id=$(gh run list -w 'Playwright Tests' -b ${{ github.event.pull_request.base.ref }} -s completed -L 1 --json 'databaseId' --jq '.[].databaseId')" >> $GITHUB_OUTPUT ||
+      - run: echo "run_id=$(gh run list -w 'Playwright Tests' -b ${{ github.ref_name }} -s completed -L 1 --json 'databaseId' --jq '.[].databaseId')" >> $GITHUB_OUTPUT ||
 
 
   e2e-test:
