--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,49 @@
+# This file is a template, and might need editing before it works on your project.
+# This is a sample GitLab CI/CD configuration file that should run without any modifications.
+# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
+# it uses echo commands to simulate the pipeline execution.
+#
+# A pipeline is composed of independent jobs that run scripts, grouped into stages.
+# Stages run in sequential order, but jobs within stages run in parallel.
+#
+# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
+#
+# You can copy and paste this template into a new `.gitlab-ci.yml` file.
+# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
+#
+# To contribute improvements to CI/CD templates, please follow the Development guide at:
+# https://docs.gitlab.com/ee/development/cicd/templates.html
+# This specific template is located at:
+# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-stages:
+stages:         # List of stages for jobs, and their order of execution
   - build
   - test
-  - deploy
+  - deployment
 
-build-app:
+build-app:      # This job runs in the build stage, which runs first.
   stage: build
   tags:
     - amazon_linux_2023
   script:
     - pwd
-    - npm ci
+    - npm i
     - npm run build:coverage
 
-playwright:
+playwright:     # This job runs in the test stage.
   stage: test
   allow_failure: true
   script:
     - npx playwright test --project=ts-etl-ui
 
-check-coverage:
+check-coverage: # This job runs in the test stage.
   stage: test
   allow_failure: true
   script:
     - npx nyc report
 
-deploy-job:
-  stage: deploy
+deployment-job:     # This job runs in the deployment stage, which runs last.
+  stage: deployment
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
