--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,57 +16,34 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-stages:          # List of stages for jobs, and their order of execution
+stages:         # List of stages for jobs, and their order of execution
   - build
   - test
-  - deploy
+  - deployment
 
-build-job:       # This job runs in the build stage, which runs first.
+build-app:      # This job runs in the build stage, which runs first.
   stage: build
+  tags:
+    - amazon_linux_2023
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - pwd
+    - npm i
+    - npm run build:coverage
 
-unit-test-job:   # This job runs in the test stage.
-  rules:
-    - if: $RUN == "run3"
-  stage: test    # It only starts when the job in the build stage completes successfully.
-  when: manual
+playwright:     # This job runs in the test stage.
+  stage: test
   allow_failure: true
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - echo "Code coverage is 90%"
-    - exit 1
+    - npx playwright test --project=ts-etl-ui
 
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  when: manual
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - echo "No lint issues found."
-
-mandtory-test-job1:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
+check-coverage: # This job runs in the test stage.
+  stage: test
   allow_failure: true
   script:
-    - echo "Linting code... This will take about 10 seconds."
-    - echo "No lint issues found."
-    - exit 1
+    - npx nyc report
 
-mandtory-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  allow_failure: true
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - echo "No lint issues found."
-    - exit 1
-
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  rules:
-    - if: $RUN == "run3"
-      when: never
-  environment: production
+deployment-job:     # This job runs in the deployment stage, which runs last.
+  stage: deployment
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
