--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "npm": ">=10"
   },
   "dependencies": {
-    "@angular/animations": "^17.0.3",
-    "@angular/cdk": "^17.0.1",
-    "@angular/common": "^17.0.3",
-    "@angular/compiler": "^17.0.3",
-    "@angular/core": "^17.0.3",
-    "@angular/forms": "^17.0.3",
-    "@angular/material": "^17.0.1",
-    "@angular/material-moment-adapter": "^17.3.10",
-    "@angular/platform-browser": "^17.0.3",
-    "@angular/platform-browser-dynamic": "^17.0.3",
-    "@angular/router": "^17.0.3",
+    "@angular/animations": "^18.2.9",
+    "@angular/cdk": "^18.2.10",
+    "@angular/common": "^18.2.9",
+    "@angular/compiler": "^18.2.9",
+    "@angular/core": "^18.2.9",
+    "@angular/forms": "^18.2.9",
+    "@angular/material": "^18.2.10",
+    "@angular/material-moment-adapter": "^18.2.10",
+    "@angular/platform-browser": "^18.2.9",
+    "@angular/platform-browser-dynamic": "^18.2.9",
+    "@angular/router": "^18.2.9",
     "coverage-istanbul-loader": "^3.0.5",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -49,35 +49,37 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^17.0.0",
-    "@angular-devkit/build-angular": "^17.0.1",
-    "@angular-eslint/builder": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/schematics": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "~17.0.1",
-    "@angular/compiler-cli": "^17.0.3",
-    "@angular/material": "^17.0.1",
-    "@playwright/test": "^1.44.0",
+    "@angular-builders/custom-webpack": "^18.0.0",
+    "@angular-devkit/build-angular": "^18.2.10",
+    "@angular-eslint/builder": "^18.4.0",
+    "@angular-eslint/eslint-plugin": "^18.4.0",
+    "@angular-eslint/eslint-plugin-template": "^18.4.0",
+    "@angular-eslint/schematics": "^18.4.0",
+    "@angular-eslint/template-parser": "^18.4.0",
+    "@angular/cli": "^18.2.10",
+    "@angular/compiler-cli": "^18.2.9",
+    "@eslint/compat": "^1.2.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
+    "@playwright/test": "^1.48.1",
     "@types/file-saver": "^2.0.7",
-    "@types/lodash": "^4.17.6",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@types/lodash": "^4.17.12",
+    "@types/node": "^22.7.9",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
-    "eslint": "^8.54.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "husky": "^9.0.11",
+    "eslint-plugin-import": "^2.31.0",
+    "husky": "^9.1.6",
     "lodash": "^4.17.21",
-    "ngx-cookie-service": "^17.1.0",
+    "ngx-cookie-service": "^18.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.4.2"
   },
   "workspaces": [
