--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@eslint/js": "^9.13.0",
     "@playwright/test": "^1.48.1",
     "@types/file-saver": "^2.0.7",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.12",
     "@types/node": "^22.7.9",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
