--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ build-app: # This job runs in the build stage, which runs first.
     - dvlb7docker03
   script:
     - npm i
+    - npx playwright install --with-deps
     - npx playwright test --project=ts-etl-ui --config=playwright-gitlab.config.ts
     - npx nyc report
   artifacts:
