--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:prod": "ng build ts-etl-ui -c prod && node server/insert-commit-hash.js",
     "build:coverage": "ng build e2e-coverage -c coverage && node server/insert-commit-hash.js",
     "test": "playwright test --project=ts-etl-ui",
+    "test:nlm": "playwright test --project=ts-etl-ui-nlm",
     "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
     "test:ui": "playwright test --project=ts-etl-ui --ui",
