--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -27,6 +27,24 @@ jobs:
       - name: Reset MongoDB
         run: PR=${{ github.event.number }} npm run reset-db
 
+  create-db:
+    name: create-db
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm i
+
+      - name: Create MongoDB
+        run: PR=${{ github.event.number }} npm run create-db
+
   e2e-test:
     needs: [ reset-db ]
     if: always()
