--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -8,7 +8,27 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  create-db:
+    name: create-db
+    if: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm i
+
+      - name: Create MongoDB
+        run: PR=${{ github.event.number }} npm run create-db
+
   reset-db:
+    # if: ${{ github.event_name == 'pull_request' && github.event.action == 'synchronize' }}
     if: false
     name: reset-db
     runs-on: ubuntu-latest
@@ -26,24 +46,6 @@ jobs:
 
       - name: Reset MongoDB
         run: PR=${{ github.event.number }} npm run reset-db
-
-  create-db:
-    name: create-db
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm i
-
-      - name: Create MongoDB
-        run: PR=${{ github.event.number }} npm run create-db
 
   e2e-test:
     needs: [ reset-db ]
