--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ test-app: # This job runs in the build stage, which runs first.
   script:
     - npm i
     - npx playwright install --with-deps
-    - npx playwright test --project=ts-etl-ui --config=playwright-gitlab.config.ts
+    - npm run test:nlm
   artifacts:
     when: always
     paths:
